# aihelper

./: .gitignore  CATALOG.md  CLAUDE.md  README.md  justfile
projects/ai-docs/06a-dut-debug/: CMakeLists.txt  README.md
projects/ai-docs/06a-dut-debug/common/: bug_check.h  sut_types.h
projects/ai-docs/06a-dut-debug/dut/: dut_dbg.h  dut_dbg_target.c  dut_dbg_target.h
projects/ai-docs/06a-dut-debug/smoke/: smoke_dut_dbg.c  smoke_fake_fpga.c  smoke_fake_hal.c  smoke_internal.h  smoke_main.c  smoke_platform.c  smoke_regs.h
projects/ai-docs/06a-dut-debug/stub_cpu/: dut_dbg_client.c  dut_dbg_client.h  sut.h  sut_case.c  sut_case.h  sut_config.h  sut_io.c  sut_io.h  sut_ops.h  sut_params.c  sut_params.h  sut_platform.c  sut_platform.h  sut_rec.c  sut_rec.h
projects/ai-docs/06b-proto-test/: .gitignore  README.md  pyproject.toml
projects/ai-docs/06b-proto-test/common/: README.md  bitops.h  bug_check.h  securec.h  sut_types.h
projects/ai-docs/06b-proto-test/dut/: compare_buf.c  compare_buf.h
projects/ai-docs/06b-proto-test/examples/: case_typical.py  debug_repl.py
projects/ai-docs/06b-proto-test/stub_cpu/: svc_compare.c
projects/ai-docs/06b-proto-test/tests/: conftest.py  test_buffer_registry.py  test_compare.py  test_errors_and_domain.py  test_fpga_adapter.py  test_lifecycle.py  test_mem_access.py  test_repl.py  test_retry.py
projects/ai-effect/: .gitignore  README.md  project.yaml  pyproject.toml
projects/ai-effect/docs/: ARCHITECTURE.md  REQUIREMENTS.md
projects/ai-effect/docs/adr/: 0001-paired-per-op-and-v0-scope.md
projects/ai-effect/docs/plans/: 2026-05-26-v0-l1-transformer.md  2026-05-27-l3-offline-decoder.md
projects/ai-effect/docs/specs/: 0001-demo-walkthrough.md  0001-l1-inline-intrinsic-redesign.md  0002-l3-offline-decoder-design.md
projects/ai-effect/examples/: conv.c
projects/ai-effect/pa_debug/: __init__.py  cli.py  git_guard.py
projects/ai-effect/pa_debug/l1_transformer/: arg_splitter.py  codegen.py  config.py  discovery.py  edits.py  frontend.py  macro_extractor.py  model.py  rule.py  rules_loader.py  transformer.py
projects/ai-effect/pa_debug/l3_analyzer/: bits.py  compare.py  decoder.py  deps.py  export.py  model.py  reader.py  resolver.py  schema.py
projects/ai-effect/rules/: blacklist.py  isomorphisms.py
projects/ai-effect/rules/hardware_macros/: conv.py  load.py
projects/ai-effect/stubs/: pa_intrinsics.h
projects/ai-effect/tests/: conftest.py
projects/ai-effect/tests/integration/: test_cli.py  test_cli_macros.py  test_frontend_calls.py  test_frontend_macros.py  test_git_guard.py  test_instrument.py  test_instrument_macros.py
projects/ai-effect/tests/unit/: test_arg_splitter.py  test_codegen.py  test_discovery.py  test_edits.py  test_frontend.py  test_l3_bits.py  test_l3_compare.py  test_l3_decoder.py  test_l3_deps.py  test_l3_export.py  test_l3_reader.py  test_macro_extractor.py  test_rule.py  test_rules_loader.py  test_transformer.py
projects/ai-restble/: .gitignore  PROMPT.md  README.md  project.yaml  pyproject.toml  pyrightconfig.json
projects/ai-restble/docs/: design-completeness.md  merge-spec.md  yaml-schema.md
projects/ai-restble/examples/: README.md  legacy-sample.xml
projects/ai-restble/examples/tables/: Interrupt.yaml
projects/ai-restble/prompts/: README.md  skill-postprocess.md  skill-preprocess.md  skill-scaffold.md
projects/ai-restble/prompts/phase2/: 01-graph-builder.md  02-echarts-canvas.md  03-detail-panel.md
projects/ai-restble/src/ecfg/: __init__.py  app.py  cli.py  model.py
projects/ai-restble/tests/: test_annotations.py  test_api_graph.py  test_browser_smoke.py  test_cli.py  test_comments.py  test_excel_importer.py  test_graph_builder.py  test_io_roundtrip.py  test_merger.py  test_schema_loader.py  test_validator.py  test_yaml_schema_compliance.py
projects/dsp-connect/: .gitignore  CMakeLists.txt  CODING_STYLE.md  DESIGN.md  Makefile  PROMPT.md  README.md  SKILL.md  ci.sh  project.yaml
projects/dsp-connect/.github/workflows/: ci.yml
projects/dsp-connect/cmake/: toolchain-arm-none-eabi.cmake  toolchain-clang.cmake  toolchain-custom.cmake.example  toolchain-gcc.cmake
projects/dsp-connect/examples/01-simple-variable/: input.md  output.md
projects/dsp-connect/examples/02-nested-struct/: input.md  output.md
projects/dsp-connect/examples/03-enum-flags/: input.md  output.md
projects/dsp-connect/examples/06-error-handling/: input.md  output.md
projects/dsp-connect/prompts/adapt/: 00-overview.md  01-identify-differences.md  02-implement-arch-adapter.md  03-implement-transport.md  04-register-in-factory.md  05-test-new-adapter.md  adapter-checklist.md
projects/dsp-connect/prompts/discover/: 00-overview.md  01-find-entry-points.md  02-extract-dwarf-usage.md  03-map-transport-layer.md  04-catalog-type-handling.md  05-identify-arch-specifics.md  06-identify-dead-code.md  07-inventory-report.md  output-schema.json
projects/dsp-connect/prompts/rewrite/: 00-overview.md  01-scaffold-project.md  02-implement-dwarf-layer.md  03-implement-transport.md  04-implement-arch.md  05-implement-resolve.md  06-implement-memory.md  07-implement-format.md  08-implement-core.md  (+1 more)
projects/dsp-connect/src/: demo_main.c
projects/dsp-connect/tests/: Makefile  run_tests  test_format.c  test_helper.h  test_main.c  test_transport_factory.c  test_util.c
projects/dsp-connect/web/: app.py
projects/dsp-core/: .gitignore  DESIGN.md  Makefile  PROMPT.md  README.md  REVIEW.md  conftest.py  project.yaml  pyproject.toml
projects/dsp-core/docs/: architecture.md  data_flow.md  harness-engineering.md
projects/dsp-core/examples/: attention_example.py  matmul_example.py
projects/dsp-core/prompts/: 01-add-codec.md  02-add-op.md  03-bridge-golden-c.md  04-write-tests.md  05-add-dtype.md  06-add-op-convention.md
projects/dsp-core/scripts/: check_func_length.py  check_prompt_refs.py  check_structure.py  extract_golden.sh  smoke_test.py
projects/dsp-core/tests/: conftest.py  test_compare.py  test_data.py  test_e2e.py  test_enums.py  test_golden.py  test_modes.py  test_ops.py  test_tensor.py
(+432 files in other folders)
